# syslog-ng-incubator

modules/: Makefile.am
modules/dummy/: Makefile.am  dummy-example.conf  dummy-grammar.ym  dummy-parser.c  dummy-plugin.c  dummy.c  dummy.h
